package com.example.engine;

public enum AnchorPoint {
    None, UpperLeft, UpperRight, DownLeft, DownRight, Middle;
}
