package com.example.engine;

public interface IFont {
    int getSize();
    boolean isBold();
}
