package com.example.engine.utilities;

public enum LerpType { Linear, EaseIn, EaseOut, EaseInOut }
